fix modal bugging out on mobile

--- a/src/styles/components/ticketmodal.scss
+++ b/src/styles/components/ticketmodal.scss
@@ -1,9 +1,9 @@
 .c-ticketmodal {
     position: absolute;
-    top: 10%;
-    left: 10%;
-    right: 10%;
-    bottom: 10%;
+    top: 5%;
+    left: 5%;
+    right: 5%;
+    bottom: 5%;
     background-color: map-get($map: $primary-colors, $key: blue500);
     border-radius: 4px;
     &-overlay {
@@ -14,12 +14,14 @@
         bottom: 0;
         background: rgba($color: #000000, $alpha: 0.8);
     }
-    &-header__svg {
-        position: absolute;
-        fill: white;
-        left: 16px;
-        top: 16px;
-        cursor: pointer;
+    &-header {
+        &__svg {
+            position: absolute;
+            fill: white;
+            left: 16px;
+            top: 16px;
+            cursor: pointer;
+        }
     }
     &__container {
         height: 100%;
